update company status

--- a/views/components/home.templ
+++ b/views/components/home.templ
@@ -48,7 +48,7 @@ templ Home() {
 									<span class="truncate">Ordex Technology Solutions LLP</span>
 								</div>
 							</div>
-							<span class="bg-retro-gray px-2 sm:px-3 py-1 border-2 border-retro-black text-[10px] sm:text-xs font-bold shadow-[2px_2px_0px_0px_#000] mt-2 md:mt-0 inline-block transform -rotate-1 whitespace-nowrap">Aug 2024 – Present</span>
+							<span class="bg-retro-gray px-2 sm:px-3 py-1 border-2 border-retro-black text-[10px] sm:text-xs font-bold shadow-[2px_2px_0px_0px_#000] mt-2 md:mt-0 inline-block transform -rotate-1 whitespace-nowrap">Aug 2024 – Dec 2025</span>
 						</div>
 						<ul class="list-disc list-outside ml-3 sm:ml-4 space-y-1.5 sm:space-y-2 text-xs sm:text-sm font-mono text-gray-800 marker:text-retro-pink">
 							<li>Contributed to production Shopify Admin GraphQL integration for product, group, and seasonal fundraising workflows</li>
